tmux - Add prefix bindings for nav keys
For a long time I've had the ^H, ^J, ^K, and ^L bound to navigate
between tmux panes and vim windows, and that works nicely. But,
occasionally I may want to run a program inside of tmux that uses one of
those for something important; so add (^O) prefixed bindings that will
pass the keystroke through.

--- a/config/tmux/tmux2.x.conf
+++ b/config/tmux/tmux2.x.conf
@@ -20,6 +20,11 @@ bind -T prefix '|' split-window -c "#{pane_current_path}" -h
 
 bind -T prefix a run "tmux choose-tree -Nf \"##{!=:##{pane_id},#{pane_id}}\" \"join-pane -t %%\""
 
+bind -T prefix C-h send C-h
+bind -T prefix C-j send C-j
+bind -T prefix C-k send C-k
+bind -T prefix C-l send C-l
+
 bind -T copy-mode-vi C-h select-pane -L
 bind -T copy-mode-vi C-j select-pane -D
 bind -T copy-mode-vi C-k select-pane -U
