nodenv - Install some default packages for new versions
Add the `nodenv-default-packages` plugin, and configure it so that any
time I install a new version of node I get yarn and support for neovim.

--- a/.gitmodules
+++ b/.gitmodules
@@ -301,3 +301,6 @@
 [submodule "vim/bundle/cmp-nvim-ultisnips"]
 	path = vim/bundle/cmp-nvim-ultisnips
 	url = https://github.com/quangnguyen30192/cmp-nvim-ultisnips
+[submodule "nodenv/plugins/nodenv-default-packages"]
+	path = nodenv/plugins/nodenv-default-packages
+	url = https://github.com/nodenv/nodenv-default-packages.git
