tmux - Check for reattach-to-user-namespace
Rather than expecting any Mac to have the reattach-to-user-namespace
command check that it exists before using that in default command.

--- a/tmux.conf
+++ b/tmux.conf
@@ -100,7 +100,7 @@ set -a -g word-separators  
   bind-key b copy-mode\; send-keys -X start-of-line\; send-keys -X search-backward " "\; send-keys -X next-word
 %endif
 
-if '[ -c /dev/machtrace ]' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
+if 'command -v reattach-to-user-namespace' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
 
 # Use my `clipboard` (AKA `clip`) command for copy and paste
 bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "clipboard copy"
