--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -165,5 +165,10 @@
     "gitlens.views.repositories.showStashes": false,
     "gitlens.views.repositories.showRemotes": false,
     "gitlens.views.stashes.reveal": false,
-    "gitlens.views.repositories.showWorktrees": false
+    "gitlens.views.repositories.showWorktrees": false,
+    "ruby.languageServer": {},
+    "ruby.useLanguageServer": true,
+    "ruby.useBundler": true,
+    "ruby.intellisense": "rubyLocate",
+    "ruby.codeCompletion": "rcodetools"
 }
