aerc - Modify account setup for jmap

--- a/config/aerc/accounts.conf
+++ b/config/aerc/accounts.conf
@@ -1,6 +1,13 @@
 [Home]
-source   = imap://aaron%40schrab.com@imap.fastmail.com:993
-outgoing = smtp://aaron%40schrab.com@smtp.fastmail.com:587
+source   = jmap+oauthbearer://aaron%40schrab.com@api.fastmail.com/.well-known/jmap
+outgoing = jmap+oauthbearer://
+source-cred-cmd = gpg --decrypt ~/.fastmail.token.gpg
+
+use-labels = true
+
+cache-state = true
+cache-blobs = true
+
 default  = INBOX
 from     = Aaron Schrab <aaron@schrab.com>
 copy-to  = Sent
