aerc - Fix capitalization of Inbox

--- a/config/aerc/accounts.conf
+++ b/config/aerc/accounts.conf
@@ -8,7 +8,7 @@ use-labels = true
 cache-state = true
 cache-blobs = true
 
-default  = INBOX
+default  = Inbox
 from     = Aaron Schrab <aaron@schrab.com>
 copy-to  = Sent
 
