aerc - Don't include message count in sidebar
I don't really care how many total messages are in a folder and
including that makes it harder to see the number of unread which is what
I *do* care about.

While at it make the sidebar wider.

--- a/config/aerc/aerc.conf
+++ b/config/aerc/aerc.conf
@@ -111,7 +111,7 @@
 # Width of the sidebar, including the border.
 #
 # Default: 20
-#sidebar-width=20
+sidebar-width=30
 
 #
 # Message to display when viewing an empty folder.
@@ -156,7 +156,7 @@
 # See aerc-templates(7) for all available fields and functions.
 #
 # Default: {{if .Unread}}{{humanReadable .Unread}}/{{end}}{{if .Exists}}{{humanReadable .Exists}}{{end}}
-#dirlist-right={{if .Unread}}{{humanReadable .Unread}}/{{end}}{{if .Exists}}{{humanReadable .Exists}}{{end}}
+dirlist-right={{if .Unread}}{{humanReadable .Unread}}{{end}}
 
 # Delay after which the messages are actually listed when entering a directory.
 # This avoids loading messages when skipping over folders and makes the UI more
