aerc - Enable threading

--- a/config/aerc/aerc.conf
+++ b/config/aerc/aerc.conf
@@ -283,7 +283,7 @@ dirlist-right={{if .Unread}}{{humanReadable .Unread}}{{end}}
 # (IMAP server or notmuch), threads will be built by the client.
 #
 # Default: false
-#threading-enabled=false
+threading-enabled=true
 
 # Force client-side thread building
 #
