--- a/config/aerc/aerc.conf
+++ b/config/aerc/aerc.conf
@@ -347,7 +347,7 @@ threading-enabled=true
 # html emails.
 #
 # Default: text/plain,text/html
-#alternatives=text/plain,text/html
+alternatives=text/plain,text/html
 
 #
 # Default setting to determine whether to show full headers or only parsed
@@ -482,7 +482,7 @@ text/calendar=calendar
 message/delivery-status=colorize
 message/rfc822=colorize
 #text/html=pandoc -f html -t plain | colorize
-#text/html=html | colorize
+text/html=html | colorize
 #text/*=bat -fP --file-name="$AERC_FILENAME"
 #application/x-sh=bat -fP -l sh
 #image/*=catimg -w $(tput cols) -
