--- a/config/aerc/aerc.conf
+++ b/config/aerc/aerc.conf
@@ -216,7 +216,7 @@ dirlist-right={{if .Unread}}{{humanReadable .Unread}}{{end}}
 # Sets the styleset to use for the aerc ui elements.
 #
 # Default: default
-#styleset-name=default
+styleset-name=qqx
 
 # Activates fuzzy search in commands and their arguments: the typed string is
 # searched in the command or option in any position, and need not be
