aerc - Misc changes

--- a/config/aerc/binds.conf
+++ b/config/aerc/binds.conf
@@ -7,6 +7,7 @@
 ? = :help keys<Enter>
 
 [messages]
+<tab> = :next-result<Enter>
 q = :quit<Enter>
 
 j = :next<Enter>
@@ -33,7 +34,8 @@ V = :mark -v<Enter>
 
 T = :toggle-threads<Enter>
 
-<Enter> = :view<Enter>
+<Enter> = :split 20<Enter>
+o = :view<Enter>
 d = :prompt 'Really delete this message?' 'delete-message'<Enter>
 D = :delete<Enter>
 A = :archive flat<Enter>
@@ -56,6 +58,8 @@ n = :next-result<Enter>
 N = :prev-result<Enter>
 <Esc> = :clear<Enter>
 
+m = :read -t<Enter>
+
 [messages:folder=Drafts]
 <Enter> = :recall<Enter>
 
@@ -67,6 +71,8 @@ S = :save<space>
 | = :pipe<space>
 D = :delete<Enter>
 A = :archive flat<Enter>
+
+m = :read -t<Enter>
 
 <C-l> = :open-link <space>
 
