git - Config for new employer

--- a/config/git/config
+++ b/config/git/config
@@ -199,6 +199,11 @@
 [url "git@gitlab.com:aschrab/"]
 	pushInsteadOf = https://gitlab.com/aschrab/
 
+[url "ssh://git@gitlab.av/repository/"]
+	insteadOf = https://gitlab.av/repository/
+[includeIf "gitdir:vc/files/"]
+	path = files.com
+
 [include]
 	path = ~/.gitconfig.local
 	path = local
