VSCode - Disable auto updates
This doesn't work well with managed systems.

--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -170,5 +170,6 @@
     "ruby.useLanguageServer": true,
     "ruby.useBundler": true,
     "ruby.intellisense": "rubyLocate",
-    "ruby.codeCompletion": "rcodetools"
+    "ruby.codeCompletion": "rcodetools",
+    "update.mode": "none"
 }
