--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -179,5 +179,11 @@
         "editor.semanticHighlighting.enabled": true
     },
     "update.mode": "none",
-    "ruby.rubocop.useBundler": true
+    "ruby.rubocop.useBundler": true,
+    "terminal.integrated.enableBell": true,
+    "terminal.integrated.stickyScroll.enabled": true,
+    "git.openRepositoryInParentFolders": "never",
+    "editor.inlayHints.enabled": "onUnlessPressed",
+    "editor.inlayHints.fontSize": 7,
+    "editor.inlayHints.padding": true
 }
