tmux - Turn on clipboard support

--- a/tmux.conf
+++ b/tmux.conf
@@ -39,6 +39,7 @@ unbind -T root WheelDownPane
 bind -T root WheelUpPane if -Ft= '#{mouse_any_flag}' 'send-keys -M' 'if -Ft= "#{pane_in_mode}" "send-keys -M" "copy-mode -eu"'
 
 set -g focus-events on
+set -g set-clipboard on
 set-window-option -g xterm-keys on
 set-window-option -g mode-keys vi
 set-window-option -g automatic-rename off
