--- a/tmux.conf
+++ b/tmux.conf
@@ -116,6 +116,10 @@ bind -T copy-mode '^o' switch-client -T prefix
 
 # Set pane border format for when there are multiple panes
 setw -g pane-border-format ' #{pane_title} '
+
+# Use color and arrows to indicate active pane
+setw -g pane-border-indicators both
+
 # Auto hide pane-border-status line when only one pane is displayed (see tmux/tmux#566)
 set-hook -g 'after-new-window'   'run-shell -b "if [ \#{window_panes} -eq 1 ]; then tmux set pane-border-status off; fi"'
 set-hook -g 'after-kill-pane'    'run-shell -b "if [ \#{window_panes} -eq 1 ]; then tmux set pane-border-status off; fi"'
