--- a/config/git/config
+++ b/config/git/config
@@ -6,6 +6,7 @@
 	#excludesfile = ~/.gitignore
 	preloadindex = yes
 	commentChar  = !
+	hooksPath = ~/.git_template/hooks
 
 [user]
 	name          = Aaron Schrab
@@ -71,7 +72,7 @@
 	mergeOptions = --ff-only
 
 [init]
-	templatedir = ~/.git_template
+	# templatedir = ~/.git_template
 	defaultBranch = master
 
 [help]
