tmux - Add prefix+a binding for swap-pane

--- a/tmux.conf
+++ b/tmux.conf
@@ -94,6 +94,8 @@ bind -T prefix C-l send C-l
 
 bind C-l send-keys 'C-l'
 
+bind -T prefix a swap-pane
+
 # Add non-breaking space to word-separators
 set -a -g word-separators  
 %if "#{m/r:^2\.,#{version}}"
