VSCode - Don't sort folders before files

--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -188,5 +188,6 @@
     "accessibility.signals.terminalBell": {
         "sound": "on"
     },
-    "terminal.integrated.enableVisualBell": true
+    "terminal.integrated.enableVisualBell": true,
+    "explorer.sortOrder": "mixed"
 }
