git - Add `changed` alias
Get list of files that have been changed relative to some point. By
default that point will be the default branch.

--- a/config/git/config
+++ b/config/git/config
@@ -104,6 +104,7 @@
 	root        = rev-parse --show-toplevel
 	url         = "!f() { git remote get-url \"${1:-$(git remote)}\"; }; f"
 	browse      = "!f() { open \"$(git url \"$@\")\" ; }; f"
+	changed     = "!f() { branch=$1; shift; git diff --name-only \"${branch:-$(git default)...}\" \"$@\" ; }; f"
 	conf        = config
 	co          = "!f() { echo Use switch or restore >&2; exit 1; }; f"
 	ci          = commit -v
