tmux - Add binding for use with remain-on-exit option
Allow easy respawning or killing of dead panes which are set to remain
on exit.

--- a/tmux.conf
+++ b/tmux.conf
@@ -128,4 +128,9 @@ set-hook -g 'after-kill-pane'    'run-shell -b "if [ \#{window_panes} -eq 1 ]; t
 set-hook -g 'pane-exited'        'run-shell -b "if [ \#{window_panes} -eq 1 ]; then tmux set pane-border-status off; fi"'
 set-hook -g 'after-split-window' 'run-shell -b "if [ \#{window_panes} -gt 1 ]; then tmux set pane-border-status top; fi"'
 
+# Easy killing or respawning of dead panes
+bind -T root X if -F '#{pane_dead}' { kill-pane } { send-keys X }
+bind -T root R if -F '#{pane_dead}' { respawn-pane } { send-keys R }
+set -g remain-on-exit-format '(R)espawn or e(X)it. Died with #{?pane_dead_signal,signal #{pane_dead_signal},status #{pane_dead_status}} at #{t:pane_dead_time}'
+
 #new-session -s dflt
