tmux - Improve searching for previous prompts
Allow incrementally searching the history for previous prompts (by
looking for non-breaking space) rather than only the most recent one.

--- a/tmux.conf
+++ b/tmux.conf
@@ -102,7 +102,8 @@ set -a -g word-separators  
   # Do nothing
 %else
   # Search back to last prompt (mnemonic: "[b]ack").
-  bind-key b copy-mode\; send-keys -X start-of-line\; send-keys -X search-backward " "\; send-keys -X next-word
+  bind-key -T prefix b { copy-mode; send-keys b }
+  bind-key -T copy-mode-vi b { send-keys -X start-of-line; send-keys -X search-backward " "; send-keys -X next-word }
 %endif
 
 # Use my `clipboard` (AKA `clip`) command for copy and paste
