--- a/.gitmodules
+++ b/.gitmodules
@@ -316,3 +316,6 @@
 [submodule "zsh.d/plugins/vim-exchange"]
 	path = zsh.d/plugins/vim-exchange
 	url = https://github.com/okapia/zsh-viexchange.git
+[submodule "vim/bundle/textobj-comment"]
+	path = vim/bundle/textobj-comment
+	url = https://github.com/glts/vim-textobj-comment.git
