tmux - Change binding to skip to last prompt
No idea what I was thinking when I decided to use `b` in copy mode for
this, I use the usual binding of that all the time.

--- a/tmux.conf
+++ b/tmux.conf
@@ -101,9 +101,9 @@ set -a -g word-separators  
 %if "#{m/r:^2\.,#{version}}"
   # Do nothing
 %else
-  # Search back to last prompt (mnemonic: "[b]ack").
-  bind-key -T prefix b { copy-mode; send-keys b }
-  bind-key -T copy-mode-vi b { send-keys -X start-of-line; send-keys -X search-backward " "; send-keys -X next-word }
+  # Search back to last prompt
+  bind-key -T prefix p { copy-mode; send-keys p }
+  bind-key -T copy-mode-vi p { send-keys -X start-of-line; send-keys -X search-backward " "; send-keys -X next-word }
 %endif
 
 # Use my `clipboard` (AKA `clip`) command for copy and paste
