Kitty - Use true black background

--- a/config/kitty/Kibble.conf
+++ b/config/kitty/Kibble.conf
@@ -1,4 +1,4 @@
-background            #0e100a
+background            #000000
 foreground            #f7f7f7
 cursor                #9fda9c
 selection_background  #9ba686
