git - Use zdiff3 conflictstyle for merges
Don't include common lines.

--- a/config/git/config
+++ b/config/git/config
@@ -72,7 +72,7 @@
 	autoSetupRemote = true
 
 [merge]
-	conflictstyle = diff3
+	conflictstyle = zdiff3
 	defaultToUpstream = yes
 	log = 999
 	tool = vimdiff
