ssh - Stop using m4 for config

--- a/ssh/config
+++ b/ssh/config
@@ -1,6 +1,4 @@
-include(`macros.m4')dnl
-define({atleast}, {ifelse(sh({perl -E '$_ = `ssh -V 2>&1`; chomp; s/^OpenSSH_//; s/p.*//; say version->parse($_) > v$1 ? "New" : "Old"'}), {New}, $2, $3)})dnl
-IgnoreUnknown AddKeysToAgent{,}UseKeychain
+IgnoreUnknown AddKeysToAgent,UseKeychain
 AddKeysToAgent yes
 UseKeychain yes
 # VisualHostKey yes
